--- a/incubator/librenms/templates/configmap.yaml
+++ b/incubator/librenms/templates/configmap.yaml
@@ -10,11 +10,9 @@ metadata:
 data:
   database.php: |-
 {{ tpl (.Files.Get "files/database.php") . | indent 4 }}
-  directories.php: |-
-{{ tpl (.Files.Get "files/directories.php") . | indent 4 }}
-  {{- if .Values.rrdcached.enabled }}
   rrdcached.php: |-
-    <?php
-    $config['rrdcached'] = {{ printf "%s:%d" (include "librenms.rrdcached.fullname" . ) (int64 .Values.rrdcached.service.port) | quote }};
-    $config['rrdtool_version'] = "1.7.0";
+{{ tpl (.Files.Get "files/rrdcached.php" ) . | indent 4 }}
+  {{- if .Values.poller.enabled }}
+  poller.php: |-
+{{ tpl (.Files.Get "files/poller.php") . | indent 4 }}
   {{- end }}
